# simple-ecs-game

./: .gitmodules  CMakeLists.txt  README.md
assets/tilemap/: worldmap.csv
include/: game.h
include/core/: assets.h  ecs.h  graphics.h  input.h  systems.h  time.h
include/generation/: map_gen.h
src/: game.c  main.c
src/core/: assets.c  ecs.c  graphics_sdl.c  input_sdl.c  time_sdl.c
src/generation/: map_gen.c
src/systems/: ai_control.c  camera.c  movement_platformer.c  render.c
